--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,15 @@
     "devDependencies": {
         "@types/express": "^4.17.9",
         "@types/node": "^14.14.14",
+        "@typescript-eslint/eslint-plugin": "^4.10.0",
+        "@typescript-eslint/parser": "^4.10.0",
+        "eslint": "^7.15.0",
         "nodemon": "^2.0.6",
         "ts-node": "^9.1.1",
         "typecript": "^0.0.1-security"
     },
     "scripts": {
-        "start": "nodemon src/index.ts"
+        "start": "nodemon src/index.ts",
+        "build": "tsc -p ./"
     }
 }
